@@ -1186,6 +1186,7 @@ Library
   does not claim to support starttls.  Adds the SMTP.ehlo_or_helo_if_needed()
   method.  Patch contributed by Bill Fenner.
 
+- Patch #1089358: Add signal.siginterrupt, a wrapper around siginterrupt(3).
 
 Extension Modules
 -----------------
